--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_EXAMPLE: ENC[AES256_GCM,data:A+X1blcgkha1A2OerWui/5Qsc75w36ANo1r2FpNHswoBs00zE1YPYj3/14LFNlVtZYVV9Hm94GIBZsWzJtVwKbk1fUNpWxNbfPEAifF39E0Y+ncrN22RfPCAqHXyNQ==,iv:NMPEB37K7asKPz3TZ0WqyPB6bTyJQS9AqgEnceezmzA=,tag:/JJ3JVOWrYCT3ACamSFFkg==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:S2DCHPVRgCsW++BHx/w=,iv:5DNTC+R/Wa5zF+pkybjwYx+xD0iKekehqSBtUI6PJWw=,tag:lIDOWw9+CZLfniHrN1cQ/g==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:XQwQGHAOWzPuzt7wbL4WVKc=,iv:6vUQFp3Md6qVFeIhVM7Cw9+dcGqKy1Juv4nfutUCJLo=,tag:LltiHnOHVDPlN/PAcU13WQ==,type:str]
+    SECRET_EXAMPLE: ENC[AES256_GCM,data:1twmf66IMAipag17F415ZtMZIJV8rc8kYsZphONGNGCVFflU9XxLR5ze++HwOJLjXaKjgJmmhhRsIS0Hq21xJIXcn5AW8YDZjy9CKvh4eNvSCRvf8giQp4FyQENhgg==,iv:X/EGJX3DMFf5zo3dJlzf0DItuuteEAG6nvB77mJpkjQ=,tag:h8BHMYgWIPhWy1tGHeJf2g==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:Cp3i8F3tUuEkJ79FLIM=,iv:yjuF5m+oIcCjcVVP2G51KZTNPjhs9Kr91r6BbYnmxnQ=,tag:Y6qWO6z90xZUWOPBwhGj5Q==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:QwlcekB9tW7yHzShZjOcNII=,iv:CzRbTZIpv3CsXgp6RLCVXCSeq/7blpeKafziI9qb7WI=,tag:KkorY4hxqUoTYIc8feKrMw==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ""
 sops:
     kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1ntv069qzs5hc4wgk8nyutkhhrnmv9hvgx4q6henctqse5kcz29qqje6ysa
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJdm5Jdm1ERVY1dGorYkZo
-            Y2RvemtWMmJnUTZEMExnby9nWHV3UW9yeGxFCnhhMnIrUFNSUDlhQ0tROEduaEJB
-            aUtURmk4aDBlKzRyM1FYbk9kTVMwbGsKLS0tIHFpMWdEZGNDdTJ2V0I1NEFuVUJP
-            UzRRVUlpaE1IODl1cFdDcHJRK0VJaHMKgUUvVIl6siLu2ih1jdvg3B+j4XZl1ieb
-            gC9bmSaOtHmRsgirjyP5arCiKTi6kvUJ1xABKRcOToej5AT8v/NB4g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzY3RWbGt1OHJrZzVrWmhD
+            a0dJRTdhZFh1ZWF6T3FHd28xenBwRXg4SFVRCkcxSjBMT1didkVFRzI4dnJFYjZq
+            anc4VFZSWU1HTXBwZlRRU1I4NjRRQzAKLS0tIDBQaUNyWFF2R1F6ekVJd1ZDUHRs
+            Z2lzbUNmU05GbytZbk9uaEthcHNJYkEKj/4aW15M1gk9WmyXwDVMPMroW1nRc0hH
+            p5vrYT7FXSLW8rKQhj+3QAXUqM6KnKW1PeTASNhQo3hbmdOPWuvgZw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-05T22:23:56Z"
-    mac: ENC[AES256_GCM,data:UY7mo9a76T6gcjE0j7rdR+cxDlogot0eqdsKggpxCydOFu0g0BfEZH4crioqrg3tYO1vVJEGqJQXrgqmgtH25+4YJ27DGzsaCU6M7HcfIwAdCcg9CFlfDSbcJaWnh4yp/B0mhaxz77G3CpUJ9RJ/fNn4FuUKOklJYRWoUhJ3jz8=,iv:9TogXBw2GBVr03xdq3vf6jUejfOfbhtfjD77l5zgXr8=,tag:3FDv1gDSKSE2ci+mN5gE6A==,type:str]
+    lastmodified: "2024-04-05T23:16:30Z"
+    mac: ENC[AES256_GCM,data:kHcqljNfaWMHHZn0YUM53YIasrvQ7RdYq/gewSJB8F6R5nx6DZUA6LRdvTYR2Trv8daHLaX0JBhLvLHeBymHdoF/HoQBuKWAHt39XoL/4KT/5I+d8LghdFz0g39wJgxMsilWKrUSlpSuVpGuTGfMTi5xVpY72dcyj7+iHKCISGo=,iv:TM9boZ6CmTOlkNELrmM94FIIOALHKOF3W+pGXJqRrd8=,tag:hoxhMuuo6C2wXK/UrCEOdA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
