--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_EXAMPLE: ENC[AES256_GCM,data:1twmf66IMAipag17F415ZtMZIJV8rc8kYsZphONGNGCVFflU9XxLR5ze++HwOJLjXaKjgJmmhhRsIS0Hq21xJIXcn5AW8YDZjy9CKvh4eNvSCRvf8giQp4FyQENhgg==,iv:X/EGJX3DMFf5zo3dJlzf0DItuuteEAG6nvB77mJpkjQ=,tag:h8BHMYgWIPhWy1tGHeJf2g==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:Cp3i8F3tUuEkJ79FLIM=,iv:yjuF5m+oIcCjcVVP2G51KZTNPjhs9Kr91r6BbYnmxnQ=,tag:Y6qWO6z90xZUWOPBwhGj5Q==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:QwlcekB9tW7yHzShZjOcNII=,iv:CzRbTZIpv3CsXgp6RLCVXCSeq/7blpeKafziI9qb7WI=,tag:KkorY4hxqUoTYIc8feKrMw==,type:str]
+    SECRET_EXAMPLE: ENC[AES256_GCM,data:DOLtMOufjkZvPzPzjFKwleVkfXzjkXAyJ4HETFVwQVgGFeDkE1IHghS9Yk71twhbHiUgK99jDZ6bjwmrBOYVCOYKb8DPgSDEOEDUQg1PAvLn/E3m2lZ0ppgzqvCaZw==,iv:Mjrj/nwbRbjZ8UdIHCCgxhS+RhOJsydhWHA6ocDluyU=,tag:sE2/qGuzosCjgufrySKl0A==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:byO6M55N3dOv9IyV9Ug=,iv:ix64J3VV0DCtABD/dIZEubdhBzO1AxPQjryV9My0qxY=,tag:d8Hl4sdXBZB7USYpL0pHiw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:OWNHspmtRsUrhvL4rRKMj38=,iv:ohYI+QZxxXGEFqydLyCdVGrMxfmizdAPGZBe+1xoNOM=,tag:W+nH/jg6POg0wgRgmsi0Mw==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ""
 sops:
     kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1ntv069qzs5hc4wgk8nyutkhhrnmv9hvgx4q6henctqse5kcz29qqje6ysa
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzY3RWbGt1OHJrZzVrWmhD
-            a0dJRTdhZFh1ZWF6T3FHd28xenBwRXg4SFVRCkcxSjBMT1didkVFRzI4dnJFYjZq
-            anc4VFZSWU1HTXBwZlRRU1I4NjRRQzAKLS0tIDBQaUNyWFF2R1F6ekVJd1ZDUHRs
-            Z2lzbUNmU05GbytZbk9uaEthcHNJYkEKj/4aW15M1gk9WmyXwDVMPMroW1nRc0hH
-            p5vrYT7FXSLW8rKQhj+3QAXUqM6KnKW1PeTASNhQo3hbmdOPWuvgZw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4UTZnekFZWkZXTVZhTDcx
+            a3RYbFdMT3hOblA0OXo2RmNoa1R4bkJMZGpVCnZ6TVg0Znlrd1owRkJIZ3hraGZU
+            cFZlOGhZSGJLbVJtTnFYNjN4R2FrWGsKLS0tIFBnZzVxbnYyVXF5YjZTdVRTT2p1
+            cjBWblFrdzc2SmFDaGVaL3ZjbTJIMFkKmFtRBDk2Q3thbBppUybqP8rfRKq94s5x
+            y0gtJ3OyCLjtUwoy3Af/YDrBcC9K+kuOVcS9llSLa0101r60WukMhA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-05T23:16:30Z"
-    mac: ENC[AES256_GCM,data:kHcqljNfaWMHHZn0YUM53YIasrvQ7RdYq/gewSJB8F6R5nx6DZUA6LRdvTYR2Trv8daHLaX0JBhLvLHeBymHdoF/HoQBuKWAHt39XoL/4KT/5I+d8LghdFz0g39wJgxMsilWKrUSlpSuVpGuTGfMTi5xVpY72dcyj7+iHKCISGo=,iv:TM9boZ6CmTOlkNELrmM94FIIOALHKOF3W+pGXJqRrd8=,tag:hoxhMuuo6C2wXK/UrCEOdA==,type:str]
+    lastmodified: "2024-04-05T23:52:30Z"
+    mac: ENC[AES256_GCM,data:NAv8pjgtAZAA1mL855UdJZTtX6gcoMUY2MmMWQkvsWtMqJ1gh5qE1jIJJfnikPLjk31Z/E+hgHuSoAcLUcEFhGT4aDzhQA37hrKxKqC7ZLrG65RjJPU2/Hry+gVvEEkwMekz9ljwFHc4UciheSMFNHQRlP7WZ7s8A6AgfBN7KL8=,iv:bBTqAWrLp2c5tc4w0EXQxN7Qw1JB5qFwfAmgNo7wR8k=,tag:5eG3wE+607AWZulTjazP2Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
