--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_EXAMPLE: ENC[AES256_GCM,data:DOLtMOufjkZvPzPzjFKwleVkfXzjkXAyJ4HETFVwQVgGFeDkE1IHghS9Yk71twhbHiUgK99jDZ6bjwmrBOYVCOYKb8DPgSDEOEDUQg1PAvLn/E3m2lZ0ppgzqvCaZw==,iv:Mjrj/nwbRbjZ8UdIHCCgxhS+RhOJsydhWHA6ocDluyU=,tag:sE2/qGuzosCjgufrySKl0A==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:byO6M55N3dOv9IyV9Ug=,iv:ix64J3VV0DCtABD/dIZEubdhBzO1AxPQjryV9My0qxY=,tag:d8Hl4sdXBZB7USYpL0pHiw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:OWNHspmtRsUrhvL4rRKMj38=,iv:ohYI+QZxxXGEFqydLyCdVGrMxfmizdAPGZBe+1xoNOM=,tag:W+nH/jg6POg0wgRgmsi0Mw==,type:str]
+    SECRET_EXAMPLE: ENC[AES256_GCM,data:nVR84SwH+N4hoctwS+jwSwPuVbctGbr8Zop3JcRY4RP8J8zFvAkNQRJrymylXea2QXG6NbyTQHgDj9aOje1IBvd5b8RTr96fVI7/2tIeSsipDyfXKLwNmUjWBkcZ6w==,iv:EeA/jsbT3yoKceeW7rAw0hqWPxiUgXzH/W4GnSCAjI4=,tag:KFqNWGM9DNuqE1RafwuNDg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:92GaNNzx6gjIStgLcWU=,iv:0vFa30AWLtqqMrcVP9jgPiI3ytI+pBKxu06H31aQjHw=,tag:EmIRZM6xatsBv7dc1mRGXQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:xbCbmhAvwyCRpc84QvIn6ZA=,iv:0lAPI73IVPGV2j93Fn5oM+zRUMslffLVXvT3KtxGAP0=,tag:06PvKWjAFrtVgGLQhjTuTQ==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ""
 sops:
     kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1ntv069qzs5hc4wgk8nyutkhhrnmv9hvgx4q6henctqse5kcz29qqje6ysa
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4UTZnekFZWkZXTVZhTDcx
-            a3RYbFdMT3hOblA0OXo2RmNoa1R4bkJMZGpVCnZ6TVg0Znlrd1owRkJIZ3hraGZU
-            cFZlOGhZSGJLbVJtTnFYNjN4R2FrWGsKLS0tIFBnZzVxbnYyVXF5YjZTdVRTT2p1
-            cjBWblFrdzc2SmFDaGVaL3ZjbTJIMFkKmFtRBDk2Q3thbBppUybqP8rfRKq94s5x
-            y0gtJ3OyCLjtUwoy3Af/YDrBcC9K+kuOVcS9llSLa0101r60WukMhA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArYWxwdStUZDZhKytKOTM4
+            Vzd1QnRCdmpWd2FBbXBXYWNENUJsdVliYmhFCjJUOG1KVlpQNjhLbStvQ1M3cEZs
+            clR3dVZWOENmaWhsdG1hWDhkbnBKUUkKLS0tIDY0cE1jcUpzd2pXcTVHUWVMUHQv
+            WTlxVnJyVlNKUStUQXZwYVpEUE5xb00KHT8Ux/+SHb8WtJulUosu3PQCizTrxOh1
+            wwvDUYMtVIqLao2EJxBAXx8oqsiFiShKOHlcGTnrjKT4jY3BQtVzGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-05T23:52:30Z"
-    mac: ENC[AES256_GCM,data:NAv8pjgtAZAA1mL855UdJZTtX6gcoMUY2MmMWQkvsWtMqJ1gh5qE1jIJJfnikPLjk31Z/E+hgHuSoAcLUcEFhGT4aDzhQA37hrKxKqC7ZLrG65RjJPU2/Hry+gVvEEkwMekz9ljwFHc4UciheSMFNHQRlP7WZ7s8A6AgfBN7KL8=,iv:bBTqAWrLp2c5tc4w0EXQxN7Qw1JB5qFwfAmgNo7wR8k=,tag:5eG3wE+607AWZulTjazP2Q==,type:str]
+    lastmodified: "2024-04-06T00:08:05Z"
+    mac: ENC[AES256_GCM,data:7IhY64G3yMDwSPM+4IJZUygbFPYb6qcSk7YkqQNAtqTykn4Tq2TEv5eQSCCCOPzwRJQKAGHhQo8CcIFte7cLB/FifUC3zkz+buU3hJvCyJWaVUneF0PhhO3SLxxI7mNZKN4IA0ebtTVqBdbU0hOELXZ4pdP5a2+gfSZ7Xcqqj/Q=,iv:DzdN8WKPi1s8YZTsKt7W03i9xsHgtskikc/iNS7m0aw=,tag:EgLHeVZL7atgGIDaq64WcA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
